Fix this bug by forcing "Prev Track" on a dynamic playlist always cause the current track to be replayed.  If the player is stopped it does absolutely nothing; if the player is playing, it restarts the track.  You can still select previous tracks via Enter or double-clicking to cause them to play again.

BUG: 148317

svn path=/branches/stable/extragear/multimedia/amarok/; revision=705494